--- a/public/admin.html
+++ b/public/admin.html
@@ -320,7 +320,7 @@
             </div>
              <div class="quest-card" style="margin-top: 20px; text-align: center;">
                 <p style="font-size: 14px; color: var(--text-color-muted); margin:0;">
-                    Насчет логина Telegram: для работы системы и подсчета прогресса он не нужен. Все привязывается к уникальному ID пользователя, который есть у всех.
+                    Панель для администратирования канала HATElove.ttv. Основные кнопки: Выдача и проверки, Twitch награды. 
                 </p>
             </div>
         </div>
