--- a/public/roulette.html
+++ b/public/roulette.html
@@ -2,62 +2,231 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Тест Рулетки</title>
+    <title>Рулетка</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
-        body { background-color: #1a1a1a; color: #e0e0e0; font-family: monospace; }
-        #log { border: 1px solid #444; padding: 10px; height: 90vh; overflow-y: scroll; }
+        /* Общие стили и сброс */
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body {
+            background-color: transparent; /* Прозрачный фон для OBS */
+            font-family: Arial, sans-serif;
+            overflow: hidden; /* Скрываем всё, что выходит за рамки */
+            height: 100vh;
+        }
+
+        /* Контейнер всей рулетки */
+        .roulette-container {
+            position: absolute;
+            top: 50px; /* Отступ сверху */
+            left: 0;
+            width: 100%;
+            height: 150px; /* Высота рулетки */
+            background: rgba(0, 0, 0, 0.3);
+            border-top: 2px solid #ffc107;
+            border-bottom: 2px solid #ffc107;
+            display: flex;
+            align-items: center;
+            opacity: 0; /* Изначально скрыт */
+            transform: translateY(-200px); /* Уезжает за экран */
+            transition: opacity 0.5s ease, transform 0.5s ease;
+        }
+        .roulette-container.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        /* Указатель (стрелка), который показывает на победителя */
+        .pointer {
+            position: absolute;
+            top: -10px;
+            left: 50%; /* Ровно по центру */
+            transform: translateX(-50%);
+            width: 4px;
+            height: 170px;
+            background: #ffc107;
+            box-shadow: 0 0 15px #ffc107;
+            z-index: 10;
+        }
+        .pointer::before {
+            content: '';
+            position: absolute;
+            top: -15px;
+            left: 50%;
+            transform: translateX(-50%);
+            border-left: 15px solid transparent;
+            border-right: 15px solid transparent;
+            border-top: 15px solid #ffc107;
+        }
+
+        /* Лента с призами */
+        .reel {
+            display: flex;
+            position: absolute;
+            left: 50%; /* Начинаем ленту от центра экрана */
+        }
+
+        /* Отдельный элемент (приз) в ленте */
+        .item {
+            width: 130px; /* Ширина одного приза */
+            height: 130px; /* Высота одного приза */
+            margin: 0 10px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 8px;
+            border: 2px solid #555;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            filter: grayscale(50%); /* Делаем неактивные призы менее яркими */
+        }
+        .item img {
+            width: 70%;
+            height: 70%;
+            object-fit: contain;
+        }
+        .item-name {
+            color: #fff;
+            font-size: 14px;
+            font-weight: bold;
+            margin-top: 5px;
+            text-shadow: 1px 1px 2px black;
+        }
+
+        /* Стиль для победившего элемента */
+        .item.winner {
+            transform: scale(1.15); /* Увеличиваем победителя */
+            border-color: #ffc107;
+            box-shadow: 0 0 25px #ffc107;
+            filter: grayscale(0%);
+        }
+
     </style>
 </head>
 <body>
-    <h1>Ожидание сигнала для рулетки...</h1>
-    <pre id="log"></pre>
 
-    <script>
-        // Ваши данные для подключения к Supabase
-        const SUPABASE_URL = 'https://pyeuckjcrsiaseyqrsek.supabase.co';
-        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB5ZXVja2pjcnNpYXNleXFyc2VrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ0NzEyOTgsImV4cCI6MjA3MDA0NzI5OH0.srRwuUygiF7jr3-b2AwyRNAmrChlW3Bzp3I-9Ju2TVg';
+    <audio id="sound-start" src="path/to/your/start-sound.mp3"></audio>
+    <audio id="sound-tick" src="path/to/your/tick-sound.mp3" loop></audio>
+    <audio id="sound-win" src="path/to/your/win-sound.mp3"></audio>
 
-        const logElement = document.getElementById('log');
+    <div class="roulette-container" id="roulette-container">
+        <div class="pointer"></div>
+        <div class="reel" id="reel">
+            </div>
+    </div>
 
-        function logMessage(message) {
-            console.log(message);
-            const content = typeof message === 'object' ? JSON.stringify(message, null, 2) : message;
-            logElement.textContent = `${new Date().toLocaleTimeString()}: ${content}\n\n${logElement.textContent}`;
+<script>
+    // ### НАСТРОЙКИ АНИМАЦИИ ###
+    const ITEM_WIDTH = 130; // Ширина одного элемента в пикселях
+    const ITEM_MARGIN = 20; // Сумма отступов (margin-left + margin-right)
+    const REEL_REPEAT_COUNT = 10; // Сколько раз дублировать список призов для длинной прокрутки
+    const SCROLL_DURATION_SECONDS = 8; // Длительность прокрутки в секундах
+    const WINNER_ANNOUNCEMENT_DELAY_MS = 5000; // Через сколько мс после выигрыша рулетка исчезнет
+
+    // ### ПОДКЛЮЧЕНИЕ К SUPABASE ###
+    const SUPABASE_URL = 'https://pyeuckjcrsiaseyqrsek.supabase.co';
+    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB5ZXVja2pjcnNpYXNleXFyc2VrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ0NzEyOTgsImV4cCI6MjA3MDA0NzI5OH0.srRwuUygiF7jr3-b2AwyRNAmrChlW3Bzp3I-9Ju2TVg';
+
+    // Получаем элементы со страницы
+    const rouletteContainer = document.getElementById('roulette-container');
+    const reel = document.getElementById('reel');
+    const soundStart = document.getElementById('sound-start');
+    const soundTick = document.getElementById('sound-tick');
+    const soundWin = document.getElementById('sound-win');
+
+    /**
+     * Основная функция запуска анимации
+     * @param {object} payload - Данные, пришедшие от Supabase
+     */
+    function startRouletteAnimation(payload) {
+        const { prizes, winner, winner_index, user_name } = payload.new.payload;
+
+        // 1. Очищаем старые призы и подготавливаем ленту
+        reel.innerHTML = '';
+        reel.style.transition = 'none'; // Отключаем плавность для мгновенного сброса
+        reel.style.transform = 'translateX(0px)'; // Сбрасываем позицию
+
+        // 2. Создаём длинный список призов для эффекта бесконечной прокрутки
+        let fullPrizeList = [];
+        for (let i = 0; i < REEL_REPEAT_COUNT; i++) {
+            fullPrizeList.push(...prizes);
         }
+        
+        // 3. Добавляем призы на HTML-страницу
+        fullPrizeList.forEach(prize => {
+            const itemElement = document.createElement('div');
+            itemElement.className = 'item';
+            itemElement.innerHTML = `
+                <img src="${prize.image_url}" alt="${prize.skin_name}">
+                <div class="item-name">${prize.skin_name}</div>
+            `;
+            reel.appendChild(itemElement);
+        });
 
-        // --- Подключение к Supabase ---
-        // ✅ ИСПРАВЛЕНИЕ ЗДЕСЬ: создаём клиент с новым именем
-        const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-        logMessage('Клиент Supabase инициализирован.');
+        // 4. Вычисляем позицию, на которой нужно остановиться
+        const itemTotalWidth = ITEM_WIDTH + ITEM_MARGIN;
+        // Находим позицию выигрышного элемента ближе к концу ленты для красивой прокрутки
+        const winnerPositionInList = (REEL_REPEAT_COUNT - 2) * prizes.length + winner_index;
+        // Высчитываем смещение в пикселях. Добавляем небольшую случайность, чтобы остановка не была всегда одинаковой.
+        const randomOffset = Math.random() * ITEM_WIDTH - (ITEM_WIDTH / 2);
+        const stopPosition = - (winnerPositionInList * itemTotalWidth + randomOffset);
+        
+        // Показываем рулетку
+        rouletteContainer.classList.add('visible');
+        soundStart.play();
 
-        // ✅ И ИСПОЛЬЗУЕМ НОВОЕ ИМЯ ЗДЕСЬ
-        const channel = supabaseClient.channel('roulette-triggers-channel')
-            .on(
-                'postgres_changes',
-                {
-                    event: 'INSERT',
-                    schema: 'public',
-                    table: 'roulette_triggers'
-                },
-                (payload) => {
-                    logMessage('🎉 ПОЛУЧЕН НОВЫЙ СИГНАЛ ДЛЯ РУЛЕТКИ! 🎉');
-                    logMessage(payload);
+        // 5. Запускаем анимацию прокрутки через небольшую задержку
+        setTimeout(() => {
+            reel.style.transition = `transform ${SCROLL_DURATION_SECONDS}s cubic-bezier(.2, .9, .35, 1)`;
+            reel.style.transform = `translateX(${stopPosition}px)`;
+            soundTick.play();
+        }, 500); // 500ms задержка
 
-                    // Здесь вы должны вызывать вашу функцию для запуска анимации
-                }
-            )
-            .subscribe((status, err) => {
-                if (status === 'SUBSCRIBED') {
-                    logMessage('✅ Успешная подписка на таблицу roulette_triggers!');
-                } else {
-                    logMessage(`Статус подписки: ${status}`);
-                    if(err) logMessage(err);
-                }
-            });
+        // 6. Когда анимация закончится, подсвечиваем победителя
+        reel.addEventListener('transitionend', () => {
+            soundTick.pause(); // Останавливаем звук прокрутки
+            soundTick.currentTime = 0;
+            soundWin.play(); // Включаем звук победы
 
-        logMessage('Попытка подписаться на канал...');
+            const allItems = document.querySelectorAll('.item');
+            const winnerElement = allItems[winnerPositionInList];
+            if (winnerElement) {
+                winnerElement.classList.add('winner');
+            }
 
-    </script>
+            // 7. Прячем рулетку после небольшой паузы
+            setTimeout(() => {
+                rouletteContainer.classList.remove('visible');
+                // Убираем класс с победителя для следующего запуска
+                if (winnerElement) winnerElement.classList.remove('winner');
+            }, WINNER_ANNOUNCEMENT_DELAY_MS);
+
+        }, { once: true }); // Этот обработчик сработает только один раз
+    }
+
+    // --- Подключение к Supabase ---
+    console.log('Инициализация клиента Supabase...');
+    const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+    const channel = supabaseClient.channel('roulette-triggers-channel')
+        .on(
+            'postgres_changes',
+            { event: 'INSERT', schema: 'public', table: 'roulette_triggers' },
+            (payload) => {
+                console.log('ПОЛУЧЕН СИГНАЛ!', payload);
+                startRouletteAnimation(payload); // <--- ЗАПУСК АНИМАЦИИ
+            }
+        )
+        .subscribe((status, err) => {
+            if (status === 'SUBSCRIBED') {
+                console.log('✅ Успешная подписка на roulette_triggers!');
+            } else {
+                console.error(`Ошибка подписки: ${status}`, err);
+            }
+        });
+    console.log('Попытка подписки на канал...');
+
+</script>
+
 </body>
 </html>
